# 2048

./: .gitignore  CMakeLists.txt  README.md
cmake/: Findraylib.cmake
docs/: architecture.md
profiles/: ntuple_paper_aligned_smoke.toml  ntuple_paper_reproduction.toml  ntuple_paper_reproduction_10m.toml  ntuple_paper_reproduction_smoke.toml  ntuple_server.toml  ntuple_strong.toml  smoke.toml  tdl_forward_10m.toml  tdl_parity.toml  tdl_parity_smoke.toml
scripts/: build_pgo_cli.sh  measure_cpu_training.sh  measure_parity_stability.sh  measure_tdl2048_baseline.sh  run_tdl2048_reference.sh  server_train_matrix.sh  train_ntuple_pipeline.sh
src/: animation.cpp  animation.h  app.cpp  board.cpp  board.h  board_fast.cpp  board_fast.h  cli_options.cpp  config.h  game.cpp  game.h  gamepad_input.cpp  gamepad_input.h  input.cpp  input.h  input_bindings.cpp  input_source.cpp  input_source.h  input_system.cpp  input_system.h  input_types.h  interaction_session.cpp  interaction_session.h  layout.cpp  layout.h  main.cpp  pointer_input.cpp  pointer_input.h  profiler.h  renderer.cpp  renderer.h  rng.cpp  rng.h  stats.cpp  stats.h  ui.cpp  ui.h
src/ai/: ai_engine.cpp  ai_engine.h  benchmark.cpp  benchmark.h  evaluator.cpp  evaluator.h  expectimax.cpp  expectimax.h  greedy.cpp  greedy.h  transposition_table.cpp  transposition_table.h
src/app/: ai_advisor.cpp  ai_advisor.h  app.cpp  cli_options.cpp  cli_options.h  game_controller.cpp  game_controller.h  hud_mapper.cpp  hud_mapper.h  interaction_session.cpp  interaction_session.h  runtime_event_mapper.cpp  runtime_event_mapper.h  session_types.h  view_state.h
src/cli/: cli_app.cpp  cli_app.h  cli_options.cpp  cli_options.h  main_cli.cpp
src/core/: board.cpp  board.h  board_fast.cpp  board_fast.h  config.h  game.cpp  game.h  rng.cpp  rng.h
src/experiment/: profile.cpp  profile.h  runner.cpp  runner.h
src/gui/: app.cpp  app.h  main.cpp  runtime_event_mapper.cpp
src/input/: gamepad_input.cpp  gamepad_input.h  input.cpp  input.h  input_bindings.cpp  input_bindings.h  input_source.cpp  input_source.h  input_system.cpp  input_system.h  input_types.h  pointer_input.cpp  pointer_input.h
src/runtime/: ai_worker.cpp  ai_worker.h  runtime_engine.cpp  runtime_engine.h  runtime_types.h
src/search/: ai_engine.cpp  ai_engine.h  evaluator.cpp  evaluator.h  expectimax.cpp  expectimax.h  greedy.cpp  greedy.h  transposition_table.cpp
src/shared/: profiler.h  stats.cpp  stats.h
src/tdl/: api.cpp  api.h  backend_common.h  backend_fixed6.cpp  backend_fixed6.h  backend_network.cpp  backend_network.h  backend_tdl8x6.h  tdl8x6_kernel.cpp  training_loop.cpp  training_loop.h  types.cpp
src/training/: benchmark.cpp  benchmark.h  selection.cpp  selection.h
src/ui/: animation.cpp  animation.h  layout.cpp  layout.h  names.h  overlays.cpp  overlays.h  panels.cpp  panels.h  renderer.cpp  renderer.h  theme.h  ui.cpp  ui.h  widgets.cpp  widgets.h
src/value/: ntuple.cpp  ntuple.h  ntuple_kernel.cpp  ntuple_kernel.h  tdl8x6_kernel.cpp  tdl8x6_kernel.h  tdl_compat.cpp  tdl_compat.h  tdl_move_order.h  tdl_training_backend.cpp  tdl_training_backend.h  tdl_types.cpp  tdl_types.h
tests/: test_ai_advisor.cpp  test_animation.cpp  test_app_cli.cpp  test_board_equivalence.cpp  test_cli_options.cpp  test_eval.cpp  test_experiment_profile.cpp  test_framework.h  test_game.cpp  test_game_controller.cpp  test_gamepad_input.cpp  test_hud_mapper.cpp  test_input_system.cpp  test_interaction.cpp  test_main.cpp  test_moves.cpp  test_pointer_input.cpp  test_runtime_engine.cpp  test_runtime_event_mapper.cpp
